--- a/index1.html
+++ b/index1.html
@@ -1,98 +1,169 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Premios • Catálogo</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #fafafa;
-      color: #222;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catálogo Simple</title>
+    <style>
+        /* 1. BASE: Limpieza total */
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            background-color: #f7f7f7; /* Gris muy suave */
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
 
-    header {
-      padding: 32px 20px;
-      text-align: center;
-    }
+        .contenedor {
+            max-width: 600px; /* Para que no se estire horrible en PC */
+            margin: 0 auto;
+            background: #fff;
+            min-height: 100vh;
+        }
 
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-      font-weight: 600;
-    }
+        /* 2. ENCABEZADO: Minimalista */
+        header {
+            padding: 20px;
+            border-bottom: 1px solid #eee;
+        }
+        h1 {
+            margin: 0;
+            font-size: 1.5rem;
+            font-weight: 800;
+        }
+        p.sub {
+            margin: 5px 0 0;
+            color: #666;
+            font-size: 0.9rem;
+        }
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      max-width: 1100px;
-      margin: auto;
-    }
+        /* 3. LA LISTA (El núcleo) */
+        ul.lista-premios {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
 
-    .item {
-      background: #fff;
-      border-radius: 18px;
-      padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      transition: transform .15s ease, box-shadow .15s ease;
-    }
+        /* 4. LA TARJETA (El diseño que pediste) */
+        li.premio-item {
+            display: flex; /* Magia: Pone foto al lado de texto */
+            padding: 15px;
+            border-bottom: 1px solid #eee; /* Línea separadora sutil */
+            align-items: center; /* Centra verticalmente */
+        }
 
-    .item:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
-    }
+        /* La Foto (Izquierda) */
+        .foto {
+            width: 80px;
+            height: 80px;
+            background-color: #ddd; /* Gris mientras carga */
+            border-radius: 8px; /* Un poquito redondeado */
+            object-fit: cover; /* Para que la foto no se deforme */
+            margin-right: 15px; /* Espacio entre foto y texto */
+            flex-shrink: 0; /* Evita que la foto se aplaste */
+        }
 
-    .item img {
-      width: 100px;
-      height: 100px;
-      object-fit: cover;
-      border-radius: 12px;
-      margin-bottom: 15px;
-    }
+        /* El Contenedor de Texto (Derecha) */
+        .info {
+            flex-grow: 1; /* Ocupa todo el espacio restante */
+            display: flex;
+            flex-direction: column; /* Apila los textos uno sobre otro */
+            justify-content: center;
+        }
 
-    .item h3 {
-      margin: 0 0 6px;
-      font-size: 18px;
-    }
+        /* Jerarquía de Textos */
+        .puntos {
+            color: #d32f2f; /* Rojo o color llamativo */
+            font-weight: 700;
+            font-size: 0.9rem;
+            margin-bottom: 2px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
 
-    .item p {
-      margin: 0;
-      font-size: 14px;
-      opacity: .7;
-    }
-  </style>
+        .nombre {
+            font-size: 1.1rem;
+            font-weight: 600;
+            color: #000;
+            margin-bottom: 4px;
+            line-height: 1.2;
+        }
+
+        .descripcion {
+            font-size: 0.85rem;
+            color: #777;
+            line-height: 1.3;
+        }
+
+        /* Botón Flotante para Login (Simple) */
+        .btn-flotante {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            right: 20px;
+            background: black;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: bold;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        }
+    </style>
 </head>
-
 <body>
-  <header>
-    <h1>Catálogo de Premios</h1>
-  </header>
 
-  <div class="grid">
-    <div class="item">
-      <img src="https://via.placeholder.com/100" alt="Premio 1" />
-      <h3>Premio 1</h3>
-      <p>Descripción breve</p>
-    </div>
+<div class="contenedor">
+    
+    <header>
+        <h1>Mis Recompensas</h1>
+        <p class="sub">Acumula puntos y canjea.</p>
+    </header>
 
-    <div class="item">
-      <img src="https://via.placeholder.com/100" alt="Premio 2" />
-      <h3>Premio 2</h3>
-      <p>Descripción breve</p>
-    </div>
+    <ul class="lista-premios">
 
-    <div class="item">
-      <img src="https://via.placeholder.com/100" alt="Premio 3" />
-      <h3>Premio 3</h3>
-      <p>Descripción breve</p>
-    </div>
-  </div>
+        <li class="premio-item">
+            <img src="https://placehold.co/150x150/orange/white?text=Cafe" class="foto" alt="Cafe">
+            <div class="info">
+                <span class="puntos">100 PUNTOS</span>
+                <span class="nombre">Café Americano</span>
+                <span class="descripcion">Tostado medio, intenso y caliente.</span>
+            </div>
+        </li>
+
+        <li class="premio-item">
+            <img src="https://placehold.co/150x150/brown/white?text=Torta" class="foto" alt="Postre">
+            <div class="info">
+                <span class="puntos">350 PUNTOS</span>
+                <span class="nombre">Torta de Chocolate</span>
+                <span class="descripcion">Porción generosa con fudge casero.</span>
+            </div>
+        </li>
+
+        <li class="premio-item">
+            <img src="https://placehold.co/150x150/red/white?text=Burger" class="foto" alt="Burger">
+            <div class="info">
+                <span class="puntos">500 PUNTOS</span>
+                <span class="nombre">Hamburguesa Clásica</span>
+                <span class="descripcion">Carne artesanal con papas al hilo.</span>
+            </div>
+        </li>
+
+        <li class="premio-item">
+            <img src="https://placehold.co/150x150/green/white?text=Ensalada" class="foto" alt="Ensalada">
+            <div class="info">
+                <span class="puntos">600 PUNTOS</span>
+                <span class="nombre">Ensalada César</span>
+                <span class="descripcion">Con trozos de pollo y crutones.</span>
+            </div>
+        </li>
+
+    </ul>
+
+    <div style="height: 100px;"></div> <a href="#" class="btn-flotante">INGRESAR / VER PUNTOS</a>
+
+</div>
+
 </body>
 </html>
