--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <script src="filtros.js"></script>
-    <script src="modal.js"></script> <script src="main.js"></script>
+    <script src="modal.js"></script>
     
     <script src="main.js"></script>
     
