--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </p>
 
         <a href="https://wa.me/51950141414" class="cta-button" target="_blank">
-            Contactar por WhatsApp
+            Validar mi marca
         </a>
     </main>
 
