--- a/index1.html
+++ b/index1.html
@@ -263,7 +263,7 @@
     // 1. DATOS (Simulación de tu Google Sheets o JSON)
     const products = [
         {
-            id: 001,
+            id: 1,
             nombre: "Ácido Sulfúrico Industrial",
             categoria: "Ácidos",
             pureza: "98%",
@@ -271,10 +271,11 @@
             cas: "7664-93-9",
             precio: 150.00,
             moneda: "USD",
-            foto: "https://via.placeholder.com/300x300/eef2f3/004e92?text=H2SO4"
+            // Busca fotos de 'quimica' o 'laboratorio'
+            foto: "https://loremflickr.com/300/300/chemistry,laboratory?random=1"
         },
         {
-            id: 002,
+            id: 2,
             nombre: "Alcohol Isopropílico",
             categoria: "Solventes",
             pureza: "99.9%",
@@ -282,10 +283,11 @@
             cas: "67-63-0",
             precio: 25.50,
             moneda: "USD",
-            foto: "https://via.placeholder.com/300x300/eef2f3/004e92?text=IPA"
+            // Busca fotos de 'ciencia'
+            foto: "https://loremflickr.com/300/300/science,liquid?random=2"
         },
         {
-            id: 003,
+            id: 3,
             nombre: "Soda Cáustica en Escamas",
             categoria: "Bases",
             pureza: "99%",
@@ -293,10 +295,11 @@
             cas: "1310-73-2",
             precio: 45.00,
             moneda: "USD",
-            foto: "https://via.placeholder.com/300x300/eef2f3/004e92?text=NaOH"
+            // Busca fotos industriales
+            foto: "https://loremflickr.com/300/300/industrial,factory?random=3"
         },
         {
-            id: 004,
+            id: 4,
             nombre: "Peróxido de Hidrógeno",
             categoria: "Oxidantes",
             pureza: "50%",
@@ -304,10 +307,10 @@
             cas: "7722-84-1",
             precio: 60.00,
             moneda: "USD",
-            foto: "https://via.placeholder.com/300x300/eef2f3/004e92?text=H2O2"
+            foto: "https://loremflickr.com/300/300/medical,lab?random=4"
         },
         {
-            id: 005,
+            id: 5,
             nombre: "Glicerina USP",
             categoria: "Alcoholes",
             pureza: "99.7%",
@@ -315,7 +318,7 @@
             cas: "56-81-5",
             precio: 320.00,
             moneda: "USD",
-            foto: "https://via.placeholder.com/300x300/eef2f3/004e92?text=GLY"
+            foto: "https://loremflickr.com/300/300/medicine,glass?random=5"
         }
     ];
 
