--- a/merchandising/index.html
+++ b/merchandising/index.html
@@ -202,7 +202,7 @@
                 // --- CONFIGURACIÓN ---
                 // Para usar Google Sheet: Archivo -> Compartir -> Publicar en la web -> CSV
                 // Pega tu link aquí. Si está vacío, se usará el modo DEMO.
-                const googleSheetUrl = ""; 
+                const googleSheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQpert6ythTXsJMwFqs5IikiAawfuqrWGakaPAErYfXQkJixw1aIbw2T_F7CkTGQ6xxedbCxNVzbFKE/pub?gid=0&single=true&output=csv"; 
                 
                 // --- ESTADO ---
                 const products = ref([]);
