--- a/404.html
+++ b/404.html
@@ -113,10 +113,10 @@
 
         <span class="error-code">ERROR 404</span>
         
-        <h1>Esta dirección no es válida.</h1>
+        <h1>Esta dirección no es válida</h1>
 
         <p class="subhead">
-            El enlace que buscas no existe o ha dejado de ser oficial.
+            El enlace que buscas no existe o ha dejado de ser oficial
         </p>
 
         <a href="/" class="cta-button">
