--- a/fuxion.html
+++ b/fuxion.html
@@ -525,9 +525,9 @@
 
     <script>
         // --- CONFIGURACIÓN ---
-        const WHATSAPP_PHONE = "51999999999"; // TU NÚMERO AQUÍ
+        const WHATSAPP_PHONE = "51992891423"; // TU NÚMERO AQUÍ
         // Si tienes el CSV, pon el enlace aquí. Si está vacío, usa datos falsos.
-        const GOOGLE_SHEET_CSV_URL = ""; 
+        const GOOGLE_SHEET_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSMhaXZEj0ZLxbLV5YlqRWTipFNB7dP_JoWyDBvRklDE619sJyse8ln00TMiN0ueFXhtLOZED2avD1V/pub?gid=0&single=true&output=csv"; 
 
         // --- DATOS SIMULADOS (FALLBACK) ---
         // Estos se usarán si no configuras la hoja de cálculo
