--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -43,7 +43,7 @@
                     class="text-white w-10 h-10 rounded-full flex items-center justify-center transition shadow-md hover:opacity-90 disabled:opacity-50"
                     style="background-color: var(--chat-color);">➤</button>
         </div>
-        <p class="text-center text-[10px] text-gray-400 mt-2">Powered by DeepSeek AI</p>
+        <p class="text-center text-[10px] text-gray-400 mt-2">Chat oficial.pe</p>
     </div>
 
     <script type="module" src="motor.js"></script>
