--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat de Pedidos</title>
+    <title>Atención al clienye</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root { --chat-color: #ea580c; }
