--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -22,7 +22,7 @@
 <body class="flex flex-col h-screen max-w-2xl mx-auto bg-gray-50 shadow-xl">
 
     <header class="text-white p-4 flex items-center gap-3 shadow-md transition-colors" style="background-color: var(--chat-color);">
-        <div class="w-10 h-10 bg-white/20 rounded-full flex items-center justify-center font-bold text-lg">FC</div>
+        <div id="header-icon-initials" class="w-10 h-10 bg-white/20 rounded-full flex items-center justify-center font-bold text-lg">FC</div>
         <div>
             <h1 id="header-title" class="font-bold text-lg leading-tight">Cargando...</h1>
             <p id="status-text" class="text-xs opacity-90">...</p>
