--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -17,33 +17,47 @@
         .bot-bubble p { margin-bottom: 0.5rem; }
         .bot-bubble p:last-child { margin-bottom: 0; }
         .bot-bubble strong { color: var(--chat-color); }
+        /* NUEVO: Clase para centrar el formulario de acceso */
+        .access-gate-container { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; height: 100%; padding: 2rem; }
     </style>
 </head>
 <body class="flex flex-col h-screen max-w-2xl mx-auto bg-gray-50 shadow-xl">
 
-    <header class="text-white p-4 flex items-center gap-3 shadow-md transition-colors" style="background-color: var(--chat-color);">
-        <div id="header-icon-initials" class="w-10 h-10 bg-white/20 rounded-full flex items-center justify-center font-bold text-lg">FC</div>
-        <div>
-            <h1 id="header-title" class="font-bold text-lg leading-tight">Cargando...</h1>
-            <p id="status-text" class="text-xs opacity-90">...</p>
-        </div>
-    </header>
+    <div id="chat-interface" class="hidden flex flex-col h-full"> 
+        <header class="text-white p-4 flex items-center gap-3 shadow-md transition-colors" style="background-color: var(--chat-color);">
+            <div id="header-icon-initials" class="w-10 h-10 bg-white/20 rounded-full flex items-center justify-center font-bold text-lg">FC</div>
+            <div>
+                <h1 id="header-title" class="font-bold text-lg leading-tight">Cargando...</h1>
+                <p id="status-text" class="text-xs opacity-90">...</p>
+            </div>
+        </header>
 
-    <div id="chat-container" class="chat-box overflow-y-auto p-4 space-y-4 flex flex-col scroll-smooth">
-        <div class="p-3 max-w-[85%] shadow-sm text-sm bg-white text-gray-800 border border-gray-200 rounded-2xl rounded-tl-none self-start bot-bubble">
-            <p id="bot-welcome-text">...</p>
+        <div id="chat-container" class="chat-box overflow-y-auto p-4 space-y-4 flex flex-col scroll-smooth">
+            <div class="p-3 max-w-[85%] shadow-sm text-sm bg-white text-gray-800 border border-gray-200 rounded-2xl rounded-tl-none self-start bot-bubble">
+                <p id="bot-welcome-text">...</p>
+            </div>
+        </div>
+
+        <div class="p-4 bg-white border-t border-gray-200">
+            <div class="flex gap-2 relative">
+                <input type="text" id="userInput" disabled 
+                       class="flex-1 border border-gray-300 rounded-full px-4 py-2 focus:outline-none focus:ring-2 focus:ring-orange-500 transition-all text-sm">
+                <button id="sendBtn" disabled
+                        class="text-white w-10 h-10 rounded-full flex items-center justify-center transition shadow-md hover:opacity-90 disabled:opacity-50"
+                        style="background-color: var(--chat-color);">➤</button>
+            </div>
+            <p class="text-center text-[10px] text-gray-400 mt-2">Chat oficial.pe</p>
         </div>
     </div>
-
-    <div class="p-4 bg-white border-t border-gray-200">
-        <div class="flex gap-2 relative">
-            <input type="text" id="userInput" disabled 
-                   class="flex-1 border border-gray-300 rounded-full px-4 py-2 focus:outline-none focus:ring-2 focus:ring-orange-500 transition-all text-sm">
-            <button id="sendBtn" disabled
-                    class="text-white w-10 h-10 rounded-full flex items-center justify-center transition shadow-md hover:opacity-90 disabled:opacity-50"
-                    style="background-color: var(--chat-color);">➤</button>
-        </div>
-        <p class="text-center text-[10px] text-gray-400 mt-2">Chat oficial.pe</p>
+    
+    <div id="access-gate" class="access-gate-container w-full h-full bg-white">
+        <h2 id="key-prompt" class="text-lg font-semibold mb-4 text-gray-700">Cargando...</h2>
+        <input type="password" id="keyInput" 
+               class="w-64 border border-gray-300 rounded-lg px-4 py-2 text-center text-sm focus:outline-none focus:ring-2 focus:ring-orange-500 transition-all">
+        <button id="keySubmit" 
+                class="mt-4 px-6 py-2 text-white font-bold rounded-lg transition-colors disabled:opacity-50"
+                style="background-color: var(--chat-color);">Ingresar</button>
+        <p id="keyError" class="text-red-500 text-xs mt-2 hidden">Clave incorrecta. Intenta de nuevo.</p>
     </div>
 
     <script type="module" src="motor.js"></script>
