--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atención al clienye</title>
+    <title>Atención al cliente</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root { --chat-color: #ea580c; }
@@ -60,6 +60,6 @@
         <p id="keyError" class="text-red-500 text-xs mt-2 hidden">Clave incorrecta. Intenta de nuevo.</p>
     </div>
 
-    <script type="module" src="motor.js"></script>
+    <script type="module" src="funciones.js"></script> 
 </body>
 </html>
