--- a/catalogo.html
+++ b/catalogo.html
@@ -3,51 +3,53 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Catálogo Luxe | Minimal</title>
+<title>Catálogo Luxe | Inteligente</title>
 <style>
-  :root { --radius: 14px; --bg: #fafafa; --max-width: 1200px; }
-  body { font-family: 'Segoe UI', Arial, sans-serif; margin:0; background: var(--bg); color:#222; overflow-x: hidden; }
+  :root { --radius: 12px; --bg: #fafafa; --max-width: 1200px; }
+  body { font-family: 'Segoe UI', Arial, sans-serif; margin:0; background: var(--bg); color:#222; }
 
-  /* CABECERA MINIMALISTA */
+  /* CABECERA */
   header { 
     background: #fff; border-bottom: 1px solid #ddd; 
-    position: sticky; top: 0; z-index: 100; width: 100%; 
+    position: sticky; top: 0; z-index: 1000; width: 100%; 
   }
   .header-content {
     max-width: var(--max-width); margin: 0 auto; padding: 10px 16px;
     display: flex; align-items: center; gap: 10px; box-sizing: border-box;
+    position: relative;
   }
 
   .search-wrapper { flex-grow: 1; }
   .search-input {
-    width: 100%; padding: 12px 16px; border: 1px solid #eee; border-radius: 12px;
-    font-size: 16px; outline: none; background: #f2f2f2; transition: 0.2s; box-sizing: border-box;
+    width: 100%; padding: 11px 16px; border: 1px solid #eee; border-radius: 10px;
+    font-size: 15px; outline: none; background: #f2f2f2; transition: 0.2s; box-sizing: border-box;
   }
   .search-input:focus { background: #fff; border-color: #ccc; }
 
-  /* BOTÓN HAMBURGUESA SUTIL */
-  .menu-toggle {
-    background: #f2f2f2; color: #666; border: none; border-radius: 12px;
-    width: 48px; height: 48px; font-size: 20px; cursor: pointer;
-    display: flex; align-items: center; justify-content: center; flex-shrink: 0;
-    transition: 0.2s;
-  }
-  .menu-toggle:hover { background: #e8e8e8; color: #222; }
+  /* SELECTOR CATEGORÍAS (Escritorio) */
+  .cat-desktop { width: 200px; display: block; }
 
-  /* PANEL LATERAL (DRAWER) */
-  .mobile-drawer {
-    position: fixed; top: 0; right: -100%; width: 280px; height: 100%;
-    background: #fff; box-shadow: -5px 0 15px rgba(0,0,0,0.05);
-    z-index: 200; transition: 0.3s ease; padding: 30px 20px; box-sizing: border-box;
+  /* BOTÓN HAMBURGUESA (Móvil) */
+  .menu-toggle {
+    display: none; background: #f2f2f2; color: #666; border: none; border-radius: 10px;
+    width: 44px; height: 44px; font-size: 20px; cursor: pointer;
+    align-items: center; justify-content: center; flex-shrink: 0;
   }
-  .mobile-drawer.active { right: 0; }
-  .drawer-title { font-weight: 700; font-size: 1.1rem; margin-bottom: 20px; display: block; }
-  
-  .overlay { 
-    position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-    background: rgba(0,0,0,0.2); display: none; z-index: 150; backdrop-filter: blur(2px);
+
+  /* DESPLEGABLE FLOTANTE MÓVIL */
+  .mobile-dropdown {
+    display: none; position: absolute; top: 100%; right: 16px; width: 200px;
+    background: #fff; border: 1px solid #ddd; border-radius: 10px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.1); padding: 10px; z-index: 2000;
   }
-  .overlay.active { display: block; }
+  .mobile-dropdown.active { display: block; }
+  .mobile-dropdown label { font-size: 11px; font-weight: 700; color: #999; display: block; margin-bottom: 5px; }
+
+  /* RESPONSIVE */
+  @media(max-width: 768px) {
+    .cat-desktop { display: none; }
+    .menu-toggle { display: flex; }
+  }
 
   /* GRILLA DE PRODUCTOS */
   .container { max-width: var(--max-width); margin: 20px auto; padding: 0 16px; box-sizing: border-box; }
@@ -58,13 +60,13 @@
     display: flex; flex-direction: column; height: 100%; transition: 0.2s;
   }
   .thumb { 
-    width: 100%; aspect-ratio: 1/1; background: #f5f5f5; border-radius: 10px; margin-bottom: 12px;
+    width: 100%; aspect-ratio: 1/1; background: #f5f5f5; border-radius: 8px; margin-bottom: 12px;
     display: flex; align-items: center; justify-content: center;
   }
-  .thumb::after { content: '👜'; font-size: 2.5rem; opacity: 0.2; }
-  .title { font-weight: 700; font-size: 16px; margin-bottom: 8px; }
-  .description { font-size: 13.5px; color: #555; line-height: 1.5; white-space: pre-wrap; flex-grow: 1; margin-bottom: 15px; }
-  .price { font-weight: 700; font-size: 1.2rem; border-top: 1px solid #f9f9f9; padding-top: 12px; }
+  .thumb::after { content: '👜'; font-size: 2.2rem; opacity: 0.2; }
+  .title { font-weight: 700; font-size: 15px; margin-bottom: 8px; }
+  .description { font-size: 13px; color: #555; line-height: 1.5; white-space: pre-wrap; flex-grow: 1; margin-bottom: 15px; }
+  .price { font-weight: 700; font-size: 1.1rem; border-top: 1px solid #f9f9f9; padding-top: 12px; }
   
   .hidden { display: none !important; }
   #status { text-align: center; padding: 40px; color: #999; }
@@ -77,19 +79,21 @@
     <div class="search-wrapper">
       <input type="text" class="search-input" id="mainSearch" placeholder="Buscar productos..." />
     </div>
-    <button class="menu-toggle" id="btnToggle">☰</button>
+
+    <select class="search-input cat-desktop" id="catDesktop">
+      <option value="todas">Categorías</option>
+    </select>
+
+    <button class="menu-toggle" id="btnMenu">☰</button>
+
+    <div class="mobile-dropdown" id="dropdown">
+      <label>FILTRAR POR</label>
+      <select class="search-input" id="catMobile" style="background: #f9f9f9;">
+        <option value="todas">Todas</option>
+      </select>
+    </div>
   </div>
 </header>
-
-<div class="overlay" id="overlay"></div>
-
-<div class="mobile-drawer" id="menuDrawer">
-  <span class="drawer-title">Filtrar por categoría</span>
-  <select class="search-input" id="mobileCat" style="background: #f9f9f9;">
-    <option value="todas">Todas las categorías</option>
-  </select>
-  <button id="btnClose" style="margin-top: 30px; width: 100%; padding: 12px; border: none; background: #eee; border-radius: 10px; cursor: pointer; font-weight: 600;">Cerrar</button>
-</div>
 
 <main class="container">
   <div id="status">Cargando productos...</div>
@@ -102,32 +106,28 @@
   const sheetId = idMatch ? idMatch[1] : '';
   const dataUrl = `https://docs.google.com/spreadsheets/d/${sheetId}/export?format=csv`;
 
-  // Elementos del DOM
   const grid = document.getElementById('products');
   const status = document.getElementById('status');
-  const mobileCat = document.getElementById('mobileCat');
+  const catDesktop = document.getElementById('catDesktop');
+  const catMobile = document.getElementById('catMobile');
   const mainSearch = document.getElementById('mainSearch');
-  const menuDrawer = document.getElementById('menuDrawer');
-  const overlay = document.getElementById('overlay');
-  const btnToggle = document.getElementById('btnToggle');
-  const btnClose = document.getElementById('btnClose');
-
-  // Función para manejar el menú (definida globalmente)
-  function toggleMenu() {
-    menuDrawer.classList.toggle('active');
-    overlay.classList.toggle('active');
-  }
-
-  btnToggle.addEventListener('click', toggleMenu);
-  btnClose.addEventListener('click', toggleMenu);
-  overlay.addEventListener('click', toggleMenu);
+  const btnMenu = document.getElementById('btnMenu');
+  const dropdown = document.getElementById('dropdown');
 
   const limpiarTexto = (str) => str.normalize("NFD").replace(/[\u0300-\u036f]/g, "").toLowerCase().trim();
+
+  // Control del desplegable móvil
+  btnMenu.onclick = (e) => {
+    e.stopPropagation();
+    dropdown.classList.toggle('active');
+  };
+
+  document.onclick = () => dropdown.classList.remove('active');
+  dropdown.onclick = (e) => e.stopPropagation();
 
   async function init() {
     try {
       const resp = await fetch(dataUrl);
-      if (!resp.ok) throw new Error();
       const csvText = await resp.text();
       const rows = parseCSV(csvText);
       const productsData = rows.slice(1);
@@ -139,9 +139,7 @@
         if(categoria) categories.add(categoria);
 
         return `
-          <div class="card" 
-               data-category="${limpiarTexto(categoria)}"
-               data-fulltext="${limpiarTexto(nombre + ' ' + descripcion)}">
+          <div class="card" data-category="${limpiarTexto(categoria)}" data-fulltext="${limpiarTexto(nombre + ' ' + descripcion)}">
             <div class="thumb"></div>
             <div class="title">${nombre}</div>
             <div class="description">${descripcion}</div>
@@ -150,16 +148,15 @@
         `;
       }).join('');
 
-      // Llenar categorías
       categories.forEach(cat => {
-        const opt = new Option(cat, limpiarTexto(cat));
-        mobileCat.add(opt);
+        catDesktop.add(new Option(cat, limpiarTexto(cat)));
+        catMobile.add(new Option(cat, limpiarTexto(cat)));
       });
 
       status.style.display = 'none';
       setupFilters();
     } catch (e) {
-      status.innerHTML = "⚠️ Error: Verifica que el Sheet sea público.";
+      status.innerHTML = "⚠️ Error al cargar los datos.";
     }
   }
 
@@ -184,10 +181,10 @@
 
   function setupFilters() {
     const items = [...document.querySelectorAll('.card')];
-    
     function run() {
       const q = limpiarTexto(mainSearch.value);
-      const cat = mobileCat.value;
+      // Detecta cuál selector está visible
+      const cat = window.getComputedStyle(catDesktop).display !== 'none' ? catDesktop.value : catMobile.value;
 
       items.forEach(card => {
         const matchesText = !q || card.dataset.fulltext.includes(q);
@@ -196,8 +193,9 @@
       });
     }
 
-    mainSearch.addEventListener('input', run);
-    mobileCat.addEventListener('change', () => { run(); toggleMenu(); });
+    mainSearch.oninput = run;
+    catDesktop.onchange = run;
+    catMobile.onchange = () => { run(); dropdown.classList.remove('active'); };
   }
 
   init();
